Add 用户的禁用删除编辑
