# docs/swagger.json
@@ -44,6 +44,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "客户状态",
+                        "name": "status",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "default": 1,
                         "description": "页码",
@@ -63,6 +69,44 @@
                         "description": "{\"status\":true}",
                         "schema": {
                             "$ref": "#/definitions/server.CustomerListResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "delete customer",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "客户"
+                ],
+                "summary": "删除客户",
+                "parameters": [
+                    {
+                        "description": "参数",
+                        "name": "args",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/server.CustomerDelRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"status\":true}",
+                        "schema": {
+                            "$ref": "#/definitions/server.CustomerDelResponse"
                         }
                     }
                 }
@@ -229,6 +273,46 @@
                         "description": "{\"status\":true}",
                         "schema": {
                             "$ref": "#/definitions/server.CustomerDetailResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/customers/disable": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "disable customer",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "客户"
+                ],
+                "summary": "禁用客户",
+                "parameters": [
+                    {
+                        "description": "参数",
+                        "name": "args",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/server.CustomerDisableRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"status\":true}",
+                        "schema": {
+                            "$ref": "#/definitions/server.CustomerDisableResponse"
                         }
                     }
                 }
@@ -562,6 +646,12 @@
                         "in": "query"
                     },
                     {
+                        "type": "string",
+                        "description": "商户状态",
+                        "name": "status",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "default": 1,
                         "description": "页码",
@@ -581,6 +671,44 @@
                         "description": "{\"status\":true}",
                         "schema": {
                             "$ref": "#/definitions/server.MerchantListResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "edit merchant",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "商户"
+                ],
+                "summary": "编辑商户",
+                "parameters": [
+                    {
+                        "description": "参数",
+                        "name": "args",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/server.MerchantEditRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"status\":true}",
+                        "schema": {
+                            "$ref": "#/definitions/server.MerchantEditResponse"
                         }
                     }
                 }
@@ -622,6 +750,44 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "delete merchant",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "商户"
+                ],
+                "summary": "删除商户",
+                "parameters": [
+                    {
+                        "description": "参数",
+                        "name": "args",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/server.MerchantDelRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"status\":true}",
+                        "schema": {
+                            "$ref": "#/definitions/server.MerchantDelResponse"
+                        }
+                    }
+                }
             }
         },
         "/merchants/detail": {
@@ -655,6 +821,46 @@
                         "description": "{\"status\":true}",
                         "schema": {
                             "$ref": "#/definitions/server.MerchantDetailResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/merchants/disable": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "disable merchant",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "商户"
+                ],
+                "summary": "禁用商户",
+                "parameters": [
+                    {
+                        "description": "参数",
+                        "name": "args",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/server.MerchantDisableRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"status\":true}",
+                        "schema": {
+                            "$ref": "#/definitions/server.MerchantDisableResponse"
                         }
                     }
                 }
@@ -1366,6 +1572,36 @@
                 }
             }
         },
+        "server.CustomerDelRequest": {
+            "type": "object",
+            "properties": {
+                "customer_id": {
+                    "description": "客户ID",
+                    "type": "integer"
+                }
+            }
+        },
+        "server.CustomerDelResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "业务状态码",
+                    "type": "string"
+                },
+                "error": {
+                    "description": "Error信息",
+                    "type": "string"
+                },
+                "message": {
+                    "description": "提示消息",
+                    "type": "string"
+                },
+                "status": {
+                    "description": "状态",
+                    "type": "boolean"
+                }
+            }
+        },
         "server.CustomerDetailResponse": {
             "type": "object",
             "properties": {
@@ -1376,6 +1612,36 @@
                 "data": {
                     "type": "object",
                     "$ref": "#/definitions/model.Customer"
+                },
+                "error": {
+                    "description": "Error信息",
+                    "type": "string"
+                },
+                "message": {
+                    "description": "提示消息",
+                    "type": "string"
+                },
+                "status": {
+                    "description": "状态",
+                    "type": "boolean"
+                }
+            }
+        },
+        "server.CustomerDisableRequest": {
+            "type": "object",
+            "properties": {
+                "customer_id": {
+                    "description": "客户ID",
+                    "type": "integer"
+                }
+            }
+        },
+        "server.CustomerDisableResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "业务状态码",
+                    "type": "string"
                 },
                 "error": {
                     "description": "Error信息",
@@ -1646,6 +1912,36 @@
                 }
             }
         },
+        "server.MerchantDelRequest": {
+            "type": "object",
+            "properties": {
+                "merchant_id": {
+                    "description": "商户ID",
+                    "type": "integer"
+                }
+            }
+        },
+        "server.MerchantDelResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "业务状态码",
+                    "type": "string"
+                },
+                "error": {
+                    "description": "Error信息",
+                    "type": "string"
+                },
+                "message": {
+                    "description": "提示消息",
+                    "type": "string"
+                },
+                "status": {
+                    "description": "状态",
+                    "type": "boolean"
+                }
+            }
+        },
         "server.MerchantDetailResponse": {
             "type": "object",
             "properties": {
@@ -1656,6 +1952,71 @@
                 "data": {
                     "type": "object",
                     "$ref": "#/definitions/model.Merchant"
+                },
+                "error": {
+                    "description": "Error信息",
+                    "type": "string"
+                },
+                "message": {
+                    "description": "提示消息",
+                    "type": "string"
+                },
+                "status": {
+                    "description": "状态",
+                    "type": "boolean"
+                }
+            }
+        },
+        "server.MerchantDisableRequest": {
+            "type": "object",
+            "properties": {
+                "merchant_id": {
+                    "description": "商户ID",
+                    "type": "integer"
+                }
+            }
+        },
+        "server.MerchantDisableResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "业务状态码",
+                    "type": "string"
+                },
+                "error": {
+                    "description": "Error信息",
+                    "type": "string"
+                },
+                "message": {
+                    "description": "提示消息",
+                    "type": "string"
+                },
+                "status": {
+                    "description": "状态",
+                    "type": "boolean"
+                }
+            }
+        },
+        "server.MerchantEditRequest": {
+            "type": "object",
+            "properties": {
+                "merchant": {
+                    "description": "商户信息",
+                    "type": "object",
+                    "$ref": "#/definitions/model.MerchantVO"
+                },
+                "merchant_id": {
+                    "description": "商户ID",
+                    "type": "integer"
+                }
+            }
+        },
+        "server.MerchantEditResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "业务状态码",
+                    "type": "string"
                 },
                 "error": {
                     "description": "Error信息",
